force-app/main/default/objects/Call_Log__c/fields/Called_By__c.field-meta.xml
<CustomField>
    <fullName>Called_By__c</fullName>
    <label>Called By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>