force-app/main/default/objects/Call_Log__c/fields/Course_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrolled</label>
    <referenceTo>Course_Enrolled__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>