force-app/main/default/objects/Call_Log__c/fields/Is_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Is_Tagged__c</fullName>
    <formula>IF(ISBLANK(Lead__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Tagged</label>
    <type>Checkbox</type>
</CustomField>