force-app/main/default/objects/Call_Log__c/fields/Notify_Me__c.field-meta.xml
<CustomField>
    <fullName>Notify_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Me</label>
    <type>Checkbox</type>
</CustomField>