force-app/main/default/objects/Call_Log__c/fields/Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>Recording_Url__c</fullName>
    <label>Recording Url</label>
    <type>Url</type>
</CustomField>