force-app/main/default/objects/Call_Log__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_Stages</valueSetName>
    </valueSet>
</CustomField>