force-app/main/default/objects/Call_Log__c/fields/Untracked__c.field-meta.xml
<CustomField>
    <fullName>Untracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Untracked</label>
    <type>Checkbox</type>
</CustomField>