force-app/main/default/objects/Call_Log__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <label>User Phone</label>
    <type>Phone</type>
</CustomField>