force-app/main/default/objects/Call_Log__c/validationRules/comment_Handling.validationRule-meta.xml
<ValidationRule>
    <fullName>comment_Handling</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(L1__c, &quot;connected&quot;),
    ISBLANK(Feedback__c)
)</errorConditionFormula>
    <errorMessage>feedback is required if call is connected</errorMessage>
</ValidationRule>