force-app/main/default/objects/Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Caller_Id__c</columns>
    <columns>Created_At__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>L1__c</columns>
    <columns>L2__c</columns>
    <columns>Untracked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Candidate__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>