force-app/main/default/objects/Call_Log__c/listViews/Delhi_Queue_Call_Log.listView-meta.xml
<ListView>
    <fullName>Delhi_Queue_Call_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>Delhi High Priorty Queue</label>
    <queue>Delhi_High_Priorty_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>